--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "well-code",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ewelinamaniecka.github.io/well-code/",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@devexpress/dx-react-core": "^4.0.8",
     "@devexpress/dx-react-grid": "^4.0.8",
     "@devexpress/dx-react-grid-material-ui": "^4.0.8",
+    "@devexpress/dx-react-scheduler-material-ui": "^4.0.8",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
